--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -20,8 +20,8 @@ jobs:
     runs-on: windows-latest
 
     env:
-      Solution_Name: TumblThree.sln
-      Test_Project_Path: TumblThree.Applications.Tests\TumblThree.Applications.Tests.csproj
+      Solution_Name: src\TumblThree\TumblThree.sln
+      Test_Project_Path: src\TumblThree\TumblThree.Applications.Tests\TumblThree.Applications.Tests.csproj
 
     steps:
     - name: Checkout
@@ -44,36 +44,44 @@ jobs:
 
     # Build the solution
     - name: Build the solution
-      run: msbuild $env:Solution_Name /p:Configuration=$env:Configuration /p:Platform="Any CPU" /maxcpucount
+      run: msbuild $env:Solution_Name /p:Configuration=$env:Configuration /p:Platform="Any CPU" /maxcpucount /v:m
       env:
         Configuration: ${{ matrix.configuration }}
+
+    # Verify build output
+    - name: Verify build output
+      run: |
+        Write-Host "Checking build outputs..."
+        Get-ChildItem -Path "src\TumblThree\TumblThree.Applications.Tests\bin" -Recurse -Filter "*.dll" | ForEach-Object { Write-Host $_.FullName }
+      shell: pwsh
 
     # Run tests if test project exists
     - name: Run tests
       run: |
-        $testDll = "TumblThree.Applications.Tests\bin\$env:Configuration\TumblThree.Applications.Tests.dll"
+        $testDll = "src\TumblThree\TumblThree.Applications.Tests\bin\$env:Configuration\TumblThree.Applications.Tests.dll"
+        
         if (Test-Path $testDll) {
-          Write-Host "Running tests from: $testDll"
-          vstest.console.exe $testDll /Logger:trx
+          Write-Host "Found test assembly at: $testDll"
+          
+          # Use VSTest with proper settings
+          vstest.console.exe $testDll /Logger:trx /ResultsDirectory:TestResults /Platform:x64 /Framework:Framework472
         } else {
           Write-Host "Test assembly not found at: $testDll"
-          Write-Host "Contents of TumblThree.Applications.Tests\bin:"
-          if (Test-Path "TumblThree.Applications.Tests\bin") {
-            Get-ChildItem -Path "TumblThree.Applications.Tests\bin" -Recurse | Select-Object FullName
-          }
-          Write-Host "Skipping tests..."
+          Write-Host "Listing directory contents:"
+          Get-ChildItem -Path "src\TumblThree\TumblThree.Applications.Tests\bin" -Recurse | Format-Table FullName
+          exit 1
         }
       env:
         Configuration: ${{ matrix.configuration }}
-      continue-on-error: true
+      shell: pwsh
 
     # Upload test results
     - name: Upload test results
-      uses: actions/upload-artifact@v4
       if: always()
+      uses: actions/upload-artifact@v4
       with:
         name: test-results-${{ matrix.configuration }}
-        path: "**/*.trx"
+        path: TestResults/*.trx
         if-no-files-found: ignore
 
     # Upload build artifacts
@@ -82,5 +90,5 @@ jobs:
       with:
         name: TumblThree-${{ matrix.configuration }}
         path: |
-          TumblThree.Presentation\bin\${{ matrix.configuration }}\**\*
+          src\TumblThree\TumblThree.Presentation\bin\${{ matrix.configuration }}
         if-no-files-found: warn
